--- a/config.toml
+++ b/config.toml
@@ -138,31 +138,26 @@ enableEmoji = true
     weight = 3
   [[menu.header]]
     name = "Educação"
-    title = ""
+    title = "Educação"
     url = "/talk/"
     weight = 4
   [[menu.header]]
     name = "Experiência"
-    title = "Experiences"
+    title = "Experiência"
     url = "/collection/"
     weight = 5
   [[menu.header]]
-    name = "Contact"
-    title = "My Contact"
+    name = "Contato"
+    title = "Meu Contato - Email"
     url = "/contact/"
     weight = 6
     
   # Configure footer  
   [[menu.footer]]
-    name = "Contact"
-    title = "Contact form"
+    name = "Contato"
+    title = "Meu Contato - Email"
     url = "/contact/"
     weight = 1
-  [[menu.footer]]
-    name = "Contributors"
-    title = "Contributors"
-    url = "/contributors/"
-    weight = 2
 
 # see https://gohugo.io/about/hugo-and-gdpr/    
 [privacy]
