--- a/config.toml
+++ b/config.toml
@@ -144,7 +144,7 @@ enableEmoji = true
   [[menu.header]]
     name = "Experiência"
     title = "Experiência"
-    url = "/collection/"
+    url = "/experiência/"
     weight = 5
   [[menu.header]]
     name = "Contato"
