2024-01-31 - Mudança na URL

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://diogo-vieri.netlify.app/"
+baseURL = "https://diogovieri.rbind.io/"
 theme = "hugo-apero"
 languageCode = "en"
 title = "Diogo Vieri"
