--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ theme = "hugo-apero"
 languageCode = "en"
 title = "Diogo Vieri"
 author = "Diogo Vieri"
-copyright = "" # set to override the auto generated copyright using org info and now year
+copyright = "Copyright © Diogo Vieri Bolzan. All Rights Reserved" # set to override the auto generated copyright using org info and now year
 googleAnalytics = ""
 disqusShortname = "" # see params.utterances to use utterances instead of Disqus
 metaDataFormat = "yaml"
