--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ languageCode = "en"
 title = "Diogo Vieri"
 author = "Diogo Vieri"
 copyright = "Copyright © Diogo Vieri Bolzan. All Rights Reserved" # set to override the auto generated copyright using org info and now year
-googleAnalytics = ""
+googleAnalytics = "G-E1Q981DKXN"
 disqusShortname = "" # see params.utterances to use utterances instead of Disqus
 metaDataFormat = "yaml"
 footnoteReturnLinkContents = "&#8617;" # ↩
